--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-validator": "^6.15.0",
     "http-errors": "~1.6.3",
+    "luxon": "^3.3.0",
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
